# Monabakebook

./: .env  README.md  netlify.toml.txt  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/management/commands/: populate_posts.py
blog/migrations/: 0001_initial.py  0002_post_slug.py  0003_categories.py  0004_rename_categories_category.py  0005_post_category.py  0006_aboutus.py  0007_remove_post_content.py  0008_post_content_post_is_published_post_user_and_more.py  0009_remove_post_is_published_remove_post_user.py  0010_post_is_published.py  0011_rename_content_post_about_post_ingredients_and_more.py  0012_remove_post_img_url_post_img.py  0013_alter_category_name_alter_post_created_at_and_more.py
blog/templates/blog/: about.html  base.html  contact.html  detail.html  index.html  search_results.html  success.html
blog/templates/blog/includes/: footer.html  header.html
myapp/: settings.py  urls.py  views.py
staticfiles/css/: style.css
