[tool.poetry]
name = "mona-bakebook"
version = "0.1.0"
description = "A Django-based Cake Recipe Blog"
authors = ["Mohana Sri <mohanasri2606@gmail.com>"]
readme = "README.md"
packages = [{ include = "blog" }]  # Or use "myapp" if your project is there

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
django = ">=5.1.7,<6.0.0"
waitress = "^3.0.2"
mysqlclient = "^2.2.7"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
